# inkcre-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py  run_bg.py
app/: __init__.py  engine.py  llm.py  task.py  utils.py
app/business/: block.py  extension.py  relation.py  resolver.py  source.py
app/schemas/: __init__.py  block.py  extension.py  relation.py  source.py  storage.py
app/utils/: base.py  datetime_.py
docs/: todo.md
extensions/twitter/: __init__.py  api.py  bookmark.py  pyproject.toml  resolver.py  schema.py
migrations/: 2025-07-25.sql  env.py
migrations/versions/: 01781a2cd1a0_upd_block_relation.py  02e59d888a38_init.py  23257a559f94_add_source_collect_at.py  2cd1b8b33501_update_ext.py  5f6235e23ba3_1.py  751b1701b7e0_upd_source.py  b6c0f730d897_use_timestampz.py  b6d0898ba462_relation_cascade_to_block.py
tests/extensions/: test_twitter.py
