[project]
name = "inkcre-core"
version = "0.1.0"
description = "Backend of InKCre."
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)",
    "tencentcloud-sdk-python-lke (>=3.0.1427,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "openai (>=1.97.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "datadot (>=1.0.0,<2.0.0)",
    "apscheduler>=3.11.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "alembic>=1.16.4",
    "alembic-utils>=0.8.8",
    "alembic-postgresql-enum>=1.8.0",
]

[tool.pdm.resolution]
excludes = ["inkcre-core"]
