[project]
name = "inkcre-ext-twitter"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Lan_zhijiang", email = "lanzhijiang@foxmail.com"},
]
dependencies = ["twikit>=2.3.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
